--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Film_Watchlist is a movie watchlist app that allows multiple users to search for movies, view details about them, and add/remove them from their personal watchlists. Save your favourite movies in your private watchlist!"
+      content="iEnjoyMovies is a movie watchlist app that allows multiple users to search for movies, view details about them, and add/remove them from their personal watchlists. Save your favourite movies in your private watchlist!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Film_Watchlist - Save your favourite movie in private watchlist..!</title>
+    <title>iEnjoyMovies - Save your favourite movie in private watchlist..!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
